# final-project

./: CMakeLists.txt  main.cpp  readme.md
.cache/clangd/index/: Allegro5Exception.cpp.AD23A24E80211942.idx  Allegro5Exception.cpp.E979F780FFDA48DD.idx  Allegro5Exception.hpp.A2E0947A828AACAF.idx  Allegro5Exception.hpp.EDBB66E7DEC4041D.idx  AudioHelper.cpp.424D3D05C07F4DCB.idx  AudioHelper.cpp.53936E9C509E0FCA.idx  AudioHelper.hpp.03940B93F34E4BD9.idx  AudioHelper.hpp.4BC1CAA97A061C6F.idx  Bullet.cpp.F48FB416F1C56226.idx  Bullet.hpp.6695E60053D0A454.idx  Collider.cpp.6BAB9400BF574A01.idx  Collider.cpp.70A1B79A763514EE.idx  Collider.hpp.4E4C2F2008D74106.idx  Collider.hpp.AD97122C9DFABB66.idx  DirtyEffect.cpp.2F50FEE88BB9EA5D.idx  DirtyEffect.cpp.7F4B07F4B39A1C0B.idx  DirtyEffect.hpp.02D26FDA9CD3181E.idx  DirtyEffect.hpp.F30951754509C4FE.idx  Door.cpp.645E23463C74157A.idx  Door.hpp.00BD8186CDF55FE7.idx  Enemy.cpp.8F375A12AE663B03.idx  Enemy.hpp.D304968620E26CDB.idx  ExplosionEffect.cpp.7DC233778890EB07.idx  ExplosionEffect.cpp.BF77571535561331.idx  ExplosionEffect.hpp.022F9FA8B587E3BE.idx  ExplosionEffect.hpp.7A34F6D73CD8F8F7.idx  FireBullet.cpp.F02B8DC7D3D6452B.idx  FireBullet.hpp.C730993AC50C2BC1.idx  FreezingBullet.cpp.9CA9359CE8BE89EF.idx  FreezingBullet.hpp.E036612E1F2DB232.idx  FreezingTurret.cpp.B7A64637CB4CF64C.idx  FreezingTurret.hpp.D1726732D2FE6C2A.idx  GameEngine.cpp.B02AE931E488A787.idx  GameEngine.cpp.B89D1A37145E9FB8.idx  GameEngine.hpp.20A0180553CFDD37.idx  GameEngine.hpp.9837F1B7346F4B77.idx  Group.cpp.1A3573BC975DCE0D.idx  Group.cpp.8BB2A8F616CE7C94.idx  Group.hpp.C128D148C615C9E5.idx  Group.hpp.E12759A0569AE5AA.idx  (+120 more)
Bullet/: FreezingBullet.cpp  FreezingBullet.hpp
Door/: Door.cpp  Door.hpp
Enemy/: Enemy.cpp  Enemy.hpp  PlaneEnemy.cpp  ShieldEnemy.cpp  ShieldEnemy.hpp  TankEnemy.cpp
Engine/: Sprite.cpp
Platform/: Platform.hpp
Player/: Player.cpp  Player.hpp
Resource/: enemy1.txt  level1.txt  level10.txt  level11.txt  level12.txt  level13.txt  level14.txt  level15.txt  level2.txt  level3.txt  level4.txt  level5.txt  level6.txt  level7.txt  level8.txt  level9.txt  scoreboard.txt
Scene/: FallingBackground.cpp  FallingBackground.hpp  Playscene.cpp  Playscene.hpp  ScoreboardScene.cpp  ScoreboardScene.hpp  SettingsScene.cpp  StageSelectScene.cpp  StartScene.cpp  StartScene.h  WinScene.cpp  WinScene.hpp
Trap/: Spike.cpp  Spike.hpp
Turret/: FreezingTurret.cpp  FreezingTurret.hpp  Landmine.cpp  Landmine.hpp  Shovel.cpp  Shovel.hpp
UI/Component/: Image.cpp  Slider.cpp
